--- a/Article Template.html
+++ b/Article Template.html
@@ -16,7 +16,7 @@
     <!-- Navbar (similar to the one on the homepage) -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Patrick</a>
+            <a class="navbar-brand" href="index.html">Butthead</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
