--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="row mt-4 d-flex justify-content-center">
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form action="https://formspree.io/f/meqybdeq" method="POST">
+                    <form action="https://formspree.io/f/manwyzpg" method="POST">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" name="name" required>
                         <input type="email" class="form-control mt-3" placeholder="Email" name="_replyto" required>
                         <input type="text" class="form-control mt-3" placeholder="Subject" name="subject" required>
