--- a/Portfolio.html
+++ b/Portfolio.html
@@ -92,6 +92,21 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="images/assessmentpaper.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Likelihood of Selecting a Good Candidate</h4>
+                            <p class="card-text">An rshiny app I created based on the Taylor-Russell tables, that shows the percentage chance of selecting a high performing candidate  for a variety of different selection tools (based on Sackett et al., 2022)
+                                
+                            </p>
+                            <div class="text-center">
+                                <a href="https://prolwes.shinyapps.io/taylorrussellmodel/" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/GitHub.png" alt="Card image" style="width:100%">
                         <div class="card-body">
