--- a/Portfolio.html
+++ b/Portfolio.html
@@ -93,7 +93,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/assessmentpaper.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="TR_Model.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Likelihood of Selecting a Good Candidate</h4>
                             <p class="card-text">An rshiny app I created based on the Taylor-Russell tables, that shows the percentage chance of selecting a high performing candidate  for a variety of different selection tools (based on Sackett et al., 2022)
